<resources>
    <string name="app_name">myanimelist</string>
    <string name="ngnl_story">o Game No Life is a surreal comedy that follows Sora and Shiro, shut-in NEET siblings and the online gamled not through war, but by way of high-stake games. This system works thanks to a fundamental rule wherein each party must wager something they deem to be of equal value to the other party\'s wager. In this strange land where the very idea of humanity is reduced to child\'s play, the indifferent genius gamer duo of Sora and Shiro have finally found a real reason to keep playing games: to unite the sixteen races of Disboard, defeat Tet, and become the gods of this new, gaming-is-everything world</string>
    <string name="title">No Game No Life</string>
    <string name="nogamenolife">NoGameNoLife</string>
    <string name="a">a</string>
    <string name="apr_9_2014">Apr 9, 2014</string>
    <string name="characters">Characters</string>
</resources>
